<resources>
    <string name="app_name">Filmoteca-DanielGarcia</string>
    <string name="creadoPor">Creado por: Daniel García Pascual</string>
    <string name="sitioWeb">IR AL SITIO WEB</string>
    <string name="soporte">SOPORTE</string>
    <string name="volver">VOLVER</string>
    <string name="acercaDe">Acerca de</string>
    <string name="NuevaPeli">Añadir película</string>
    <string name="Director">Director:</string>
    <string name="Anyo">Año:</string>
    <string name="IMDB">VER EN IMDB</string>
    <string name="volverInicio">VOLVER AL MENU</string>
    <string name="editar">EDITAR PELICULA</string>
    <string name="capturarImg">CAPTURAR IMAGEN</string>
    <string name="selectImg">SELECCIONAR IMAGEN</string>
    <string name="cancelar">CANCELAR</string>
    <string name="guardar">GUARDAR</string>
    <string name="eliminar">Eliminar</string>
    <string name="fondoEditText">Escribe aqui...</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="entrar">ENTRAR</string>
    <string name="Registro">REGISTRARSE</string>
    <string name="datosUsuario">Datos del usuario:</string>
    <string name="masInfo">Mas info</string>
    <string name="salir">Salir</string>
    <string name="defaultFilms">Añadir películas por defecto</string>

    <string-array name="generos_array">
        <item>Action</item>
        <item>Comedy</item>
        <item>Drama</item>
        <item>Scifi</item>
        <item>Horror</item>
    </string-array>
    <string-array name="formatos_array">
        <item>DVD</item>
        <item>Bluray</item>
        <item>Digital</item>
    </string-array>
</resources>