<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/creadoPor"
        android:layout_width="339dp"
        android:layout_height="45dp"
        android:text="@string/creadoPor"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="253dp"
        android:layout_height="187dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creadoPor"
        app:layout_constraintVertical_bias="0.088"
        app:srcCompat="@drawable/bellingham_meme" />

    <Button
        android:id="@+id/btnSitioWeb"
        android:layout_width="165dp"
        android:layout_height="79dp"
        android:layout_marginStart="16dp"
        android:text="@string/sitioWeb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.154" />

    <Button
        android:id="@+id/btnSoporte"
        android:layout_width="146dp"
        android:layout_height="66dp"
        android:text="@string/soporte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSitioWeb"
        app:layout_constraintVertical_bias="0.201" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="141dp"
        android:layout_height="70dp"
        android:text="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSoporte"
        app:layout_constraintVertical_bias="0.376" />
</androidx.constraintlayout.widget.ConstraintLayout>