<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_marginTop="48dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/Registro"
        android:textSize="16dp"
        app:cornerRadius="0dp"
        app:icon="@android:drawable/ic_menu_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordSignUp" />

    <TextView
        android:id="@+id/txtUserSignUp_default"
        android:layout_width="161dp"
        android:layout_height="27dp"
        android:layout_marginTop="44dp"
        android:text="@string/usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserDataSignUp_default" />

    <EditText
        android:id="@+id/txtPasswordSignUp"
        android:layout_width="305dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/contrasenya"
        android:inputType="textPassword"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordSignUp_default" />

    <EditText
        android:id="@+id/txtUsernameSignUp"
        android:layout_width="301dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="text"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserSignUp_default" />

    <TextView
        android:id="@+id/txtPasswordSignUp_default"
        android:layout_width="161dp"
        android:layout_height="27dp"
        android:layout_marginTop="36dp"
        android:text="@string/contrasenya"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsernameSignUp" />

    <TextView
        android:id="@+id/txtUserDataSignUp_default"
        android:layout_width="309dp"
        android:layout_height="32dp"
        android:layout_marginTop="60dp"
        android:text="@string/datosUsuario"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>