<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilmEditActivity">

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="141dp"
        android:layout_height="52dp"
        android:layout_marginTop="27dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/guardar"
        android:textSize="17dp"
        app:cornerRadius="0dp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEditComentario"
        app:layout_constraintVertical_bias="0.257" />

    <Spinner
        android:id="@+id/spnFormato"
        android:layout_width="273dp"
        android:layout_height="49dp"
        android:entries="@array/formatos_array"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnGenero"
        app:layout_constraintVertical_bias="0.077" />

    <EditText
        android:id="@+id/txtEditAnyo"
        android:layout_width="333dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEditDirector"
        app:layout_constraintVertical_bias="0.03" />

    <EditText
        android:id="@+id/txtEditWeb"
        android:layout_width="333dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEditAnyo"
        app:layout_constraintVertical_bias="0.044" />

    <EditText
        android:id="@+id/txtEditDirector"
        android:layout_width="333dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEditTitulo"
        app:layout_constraintVertical_bias="0.028" />

    <Button
        android:id="@+id/btnSelectImg"
        android:layout_width="172dp"
        android:layout_height="54dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/selectImg"
        android:textSize="16dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toEndOf="@+id/imgFilm"
        app:layout_constraintTop_toBottomOf="@+id/btnCapturarImg"
        app:layout_constraintVertical_bias="0.036" />

    <ImageView
        android:id="@+id/imgFilm"
        android:layout_width="141dp"
        android:layout_height="131dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnCapturarImg"
        android:layout_width="172dp"
        android:layout_height="54dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/capturarImg"
        android:textSize="16dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toEndOf="@+id/imgFilm"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <EditText
        android:id="@+id/txtEditTitulo"
        android:layout_width="333dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <EditText
        android:id="@+id/txtEditComentario"
        android:layout_width="333dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnFormato"
        app:layout_constraintVertical_bias="0.155" />

    <Spinner
        android:id="@+id/spnGenero"
        android:layout_width="273dp"
        android:layout_height="49dp"
        android:entries="@array/generos_array"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.394"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEditWeb"
        app:layout_constraintVertical_bias="0.068" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="141dp"
        android:layout_height="52dp"
        android:layout_marginTop="27dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/cancelar"
        android:textSize="17dp"
        app:cornerRadius="0dp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEditComentario"
        app:layout_constraintVertical_bias="0.257" />
</androidx.constraintlayout.widget.ConstraintLayout>